Cleanup of infrared zuul jobs
tobiko-infrared-ubuntu is removed. It always fails because infrared is
not compatible with ubuntu-focal.

Former tobiko-infrared is removed. It did not really test anything
because there was no "primary" host in the inventory and essential
ansible plays from this job need to be run on the "primary" host.

Former tobiko-infrared-centos-9 is renamed to tobiko-infrared and it
will only use one node. The aim of this job is just to validate the the
tobiko infrared plugin works (it just executes tobiko unit and
functional tests).

Existing tobiko-check-collected-files ansible role has been removed. It
was only used to test that results where properly generated when the
tobiko infrared plugin was used, but it only work when no workflow was
specify.

Change-Id: I6e334014420757aafa436f42b189c932ed02ae56

--- a/tox.ini
+++ b/tox.ini
@@ -393,6 +393,7 @@ setenv =
     IR_HOME = {env:IR_HOME:{envdir}/home/infrared}
     IR_TOBIKO_PLUGIN = {env:IR_TOBIKO_PLUGIN:{toxinidir}/infrared_plugin}
     IR_WORKSPACE_FILE = {env:IR_WORKSPACE_FILE:{toxinidir}/workspace.tgz}
+    IR_WORKFLOW = {env:IR_WORKFLOW:unit-functional}
     SETUPTOOLS_USE_DISTUTILS = stdlib
 
 commands_pre =
@@ -401,6 +402,7 @@ commands_pre =
 commands =
     ir tobiko --tobiko-src-dir '{toxinidir}' \
               --collect-dir '{env:TOX_REPORT_DIR}' \
+              --workflow '{env:IR_WORKFLOW}' \
               {posargs}
 
 
