Skip BackgroundProcessTest tests when ha_faults are executed
When ha_faults tests are executed, overcloud nodes are rebooted,
affecting those tests that run background processes on VM instances or
against VM instances.
The goal of those tests is to run on other scopes, such as upgrades, ovs
to ovn migration, etc.

Change-Id: Ie31f9409a4fb5e8bc86991cf4511e155f5b80d71

--- a/roles/tobiko-run/vars/test-workflow-faults-neutron.yaml
+++ b/roles/tobiko-run/vars/test-workflow-faults-neutron.yaml
@@ -12,6 +12,7 @@ test_workflow_steps:
     tox_step_name: create_neutron_resources
     tox_environment:
       TOBIKO_PREVENT_CREATE: no
+    pytest_addopts: "--skipregex='BackgroundProcessTest'"
 
   - tox_description: 'run disruptive test cases (neutron)'
     tox_envlist: neutron_faults
@@ -34,3 +35,4 @@ test_workflow_steps:
     tox_step_name: verify_neutron_resources
     tox_environment:
       TOBIKO_PREVENT_CREATE: yes
+    pytest_addopts: "--skipregex='BackgroundProcessTest'"
