--- a/roles/tobiko-run/vars/test-workflow-check-resources-faults.yaml
+++ b/roles/tobiko-run/vars/test-workflow-check-resources-faults.yaml
@@ -22,3 +22,4 @@ test_workflow_steps:
     tox_step_name: verify_resources
     tox_environment:
       TOBIKO_PREVENT_CREATE: yes
+    pytest_addopts: "--skipregex='BackgroundProcessTest'"
