Cap types-setuptools package for mypy linter checks
This patch caps types-setuptools with 80.3.0.20250505 version which is
the same as in the global upper-constraints OpenStack file.
Using newer version is causing mypy linter failures as described in
the bug related to this fix.

Closes: #TOBIKO-146
Change-Id: I7c08e361397865553e27b0e08da86ff318052561

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,6 +38,8 @@ repos:
     hooks:
       - id: mypy
         files: ^tobiko/
+        additional_dependencies:
+          - types-setuptools==80.3.0.20250505
         entry: mypy --install-types --non-interactive tobiko/
         pass_filenames: false
         # args: [--ignore-missing-imports]
