Add background DHCP service test
This new background tests runs simple bash script in the guest VM and,
using nmap's script sends DHCP request to check if there will be DHCP
offer send back.

Related: #TOBIKO-138
Change-Id: Ied73c1142ab17533a9240fa53cde978354909bb8

--- a/roles/tobiko-common/defaults/main.yaml
+++ b/roles/tobiko-common/defaults/main.yaml
@@ -76,7 +76,7 @@ download_images_default:
       --copy-in /tmp/config:/etc/selinux
       --firstboot-command 'sh -c "nmcli connection add type vlan con-name vlan101 ifname vlan101 vlan.parent eth0 vlan.id 101 ipv6.addr-gen-mode default-or-eui64;
       nmcli connection add type vlan con-name vlan101 ifname vlan101 vlan.parent ens3 vlan.id 101 ipv6.addr-gen-mode default-or-eui64"'
-      --install iperf3,iputils,nmap-ncat,nginx
+      --install iperf3,iputils,nmap,nmap-ncat,nginx
       --copy-in /tmp/nginx_id.conf:/etc/nginx/conf.d
       --run-command 'systemctl enable nginx'
       --copy-in /tmp/iperf3-server.service:/etc/systemd/system
