--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -13,8 +13,7 @@
       - devstack-tobiko-storage
       - docs-on-readthedocs
       - openstack-cover-jobs
-      - openstack-python3-zed-jobs
-      - openstack-python3-zed-jobs-arm64
+      - openstack-python3-jobs
       - publish-to-pypi
       - tobiko-infrared
     vars:
@@ -32,3 +31,18 @@
     pre-release:
       jobs:
         - tobiko-upload-git-mirror
+
+    # disable devstack-tobiko-ovs and devstack-tobiko-ovs-neutron voting
+    # temporarily due to LP #2114176
+    check:
+      jobs:
+        - devstack-tobiko-ovs:
+            voting: false
+        - devstack-tobiko-ovs-neutron:
+            voting: false
+    gate:
+      jobs:
+        - devstack-tobiko-ovs:
+            voting: false
+        - devstack-tobiko-ovs-neutron:
+            voting: false
