Add openstack-tox-py39 to tobiko gates again
openstack-python3-zed-jobs was replaced with openstack-python3-jobs, but
in tobiko we are still interested in testing python3.9

Change-Id: I1086f3197fee97fabff2bc942696f42fb0b69af3

--- a/zuul.d/others.yaml
+++ b/zuul.d/others.yaml
@@ -30,3 +30,18 @@
       - name: git_mirror_credentials
         secret: tobiko_git_mirror_credentials
         pass-to-parent: true
+
+
+- project-template:
+    name: tobiko-tox-py39
+    description: |
+      Jobs that runs tobiko unit tests on python3.9
+    check:
+      jobs:
+        - openstack-tox-py39
+    gate:
+      jobs:
+        - openstack-tox-py39
+    periodic:
+      jobs:
+        - openstack-tox-py39
