Revert "Make devstack-tobiko-octavia jobs to be non-voting"
This reverts commit f09675ed2ae6c4936d420b437559aa9082b4224f.

Reason for revert: devstack-tobiko-octavia fixed after update to ubuntu noble

Change-Id: I6b5b06130cdfbe8c7c67477d8d5807bd3895c9b2
Depends-On: Ibeb8cab99ddb1cd7e926a37564f418636e4ea91c

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -8,6 +8,7 @@
       - devstack-tobiko-functional
       - devstack-tobiko-neutron
       - devstack-tobiko-nova
+      - devstack-tobiko-octavia
       - devstack-tobiko-ovs
       - devstack-tobiko-storage
       - docs-on-readthedocs
@@ -17,18 +18,6 @@
       - tobiko-infrared
     vars:
         rtd_webhook_id: '84947'
-
-    check:
-      jobs:
-        - devstack-tobiko-octavia:
-            voting: false
-        - devstack-tobiko-ovs-octavia:
-            voting: false
-    gate:
-      jobs:
-        - devstack-tobiko-octavia:
-            voting: false
-
     periodic:
       jobs:
         - requirements-check:
