``OvnMetadataAgentTest`` to test OVN agent too
The class test ``OvnMetadataAgentTest`` can be executed with two
different agents:
* OVN Metadata agent, that is being deprecated.
* OVN agent, that can be configured with the metadata extension and
  provide the same functionality as the first one.

Also switched to F41 guest image as F40 moved to https://archives.fedoraproject.org.

Depends-On: https://review.opendev.org/c/openstack/neutron/+/956174
Closes-Bug: #2118398
Closes-Bug: #2118902
Signed-off-by: Rodolfo Alonso Hernandez <ralonsoh@redhat.com>
Change-Id: I760add39a052f4ae46385df24497e6487836f693

--- a/roles/tobiko-common/defaults/main.yaml
+++ b/roles/tobiko-common/defaults/main.yaml
@@ -63,7 +63,7 @@ download_images_default:
   advanced_vm:
     username: fedora
     type: advanced_vm
-    url: "https://download.fedoraproject.org/pub/fedora/linux/releases/40/Cloud/x86_64/images/Fedora-Cloud-Base-Generic.x86_64-40-1.14.qcow2"
+    url: "https://download.fedoraproject.org/pub/fedora/linux/releases/41/Cloud/x86_64/images/Fedora-Cloud-Base-Generic-41-1.4.x86_64.qcow2"
     customized: false
     copy_in_files:
       - nginx_id.conf
