Fix mypy by pinning types-paramiko to 3.5.0.20250801
This fixes openstack-tox-linters jobs run on tobiko.
A new version had broken the job:
https://pypi.org/project/types-paramiko/4.0.0.20250806/

Change-Id: Ia89487426aca1d7cd09913dc2c63bd563baa6c2f
Signed-off-by: Eduardo Olivares <eolivare@redhat.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,6 +40,7 @@ repos:
         files: ^tobiko/
         additional_dependencies:
           - types-setuptools==80.3.0.20250505
+          - types-paramiko==3.5.0.20250801
         entry: mypy --install-types --non-interactive tobiko/
         pass_filenames: false
         # args: [--ignore-missing-imports]
