--- a/tox.ini
+++ b/tox.ini
@@ -362,6 +362,17 @@ setenv =
     TOX_NUM_PROCESSES = 1
     PYTEST_TIMEOUT = 3600
 
+[testenv:update_podified_post]
+
+basepython = {[integration]basepython}
+envdir = {[integration]envdir}
+passenv = {[integration]passenv}
+setenv =
+    {[integration]setenv}
+    OS_TEST_PATH = {toxinidir}/tobiko/tests/update/podified/post
+    TOX_NUM_PROCESSES = 1
+    PYTEST_TIMEOUT = 3600
+
 
 # --- CI workflow test environments -------------------------------------------
 
