Fix linters and temporarily ignore py313 jobs
linters job started failing with tobiko after pylint-4 was released
on October 2025. Pinning tobiko's pylint version to 3.3.9 fixed the job.

The zuul job `openstack-tox-py313` started voting on master branch
recently [1]. Tobiko will soon support this job [2], but not yet, so
voting has to be disabled for it.

[1] https://review.opendev.org/c/openstack/openstack-zuul-jobs/+/958617
[2] https://review.opendev.org/c/x/tobiko/+/955203

Change-Id: I9893fcb122de119bd95878ed16829ddfa721e8e9

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -32,3 +32,14 @@
     pre-release:
       jobs:
         - tobiko-upload-git-mirror
+    # TODO(eolivare): openstack-tox-py313 voting is disabled temporarily
+    # There is an ongoing patch that fixes tobiko for this job:
+    # https://review.opendev.org/c/x/tobiko/+/955203
+    check:
+      jobs:
+        - openstack-tox-py313:
+            voting: false
+    gate:
+      jobs:
+        - openstack-tox-py313:
+            voting: false
