Add authorized ssh key for authorized users
List `ssh_other_authorized_users` can be defined with users that will
allow tobiko tests to connect via ssh.

Change-Id: I792fe3bfcd2e404b14c898a9583b9aeb1deb1773

--- a/roles/tobiko-ensure-ssh-keys/defaults/main.yaml
+++ b/roles/tobiko-ensure-ssh-keys/defaults/main.yaml
@@ -6,3 +6,4 @@ ssh_key_file: '{{ ansible_user_dir }}/.ssh/id_{{ ssh_key_algorithm }}'
 ssh_key_algorithm: ecdsa
 ssh_key_size: 521
 ssh_key_user: '{{ ansible_ssh_user }}'
+ssh_other_authorized_users: []
